# magic_car_pet_modern

./: CMakeLists.txt  READ.ME.orig  README.md  README_MODERN.md
assets/: g256.pcx  h256.pcx  t2.pcc  t5.pcc
src/: fixed.h  fixed2.h  fly.cpp  grp.h  grp_sdl.cpp  keyboard.h  keyboard_sdl.cpp  mcpet.cpp  mcpet.h  tp.h  tpf.cpp
